--- a/addAlbum.html
+++ b/addAlbum.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="container">
-    <div class="menu">
-    <div><img src="abeltsf.jpg" alt="jpg" class="imageXO"></div>
+    <div class="menu texto">
+    <div><img src="abeltsf.png" alt="jpg" class="imageXO"></div> <div id="user">Camilulsh</div>
     <br>
     <div class="divisor"><a href="index.html">Other albums</a></div>
     <div class="divisor"><a href="index.html">Edit album</a></div>
