pre-entrega uno

--- a/Edit.html
+++ b/Edit.html
@@ -11,7 +11,7 @@
     
     <div class="grow text-center text-2xl text-white flex items-center justify-center" id="fondo">
         <form action="">
-            <h2 class="text-3xl font-bold underline text-center">Añadir cancion </h2>
+            <h2 class="text-3xl font-bold underline text-center"> Editar Album </h2>
             <br>
             <label for="nombre" >Título</label>
             <br>
@@ -42,10 +42,11 @@
     ">
         <img src="abeltsf.png" alt="jpg" class="w-24 py-4 m-2"> <div id="user" class="text-2xl">Camilulsh</div>
     <br>
-    <div class="py-4 m-3"><a href="index.html">Other albums</a></div>
-    <div class="py-4 m-3"><a href="index.html">Edit album</a></div>
-    <div class="py-4 m-3"><a href="index.html">Add Songs</a></div>
-    <div class="py-4 m-3"><a href="index.html">Log out</a></div>
+    <div class="py-4 m-3"><a href="Home.html">Otros álbumes</a></div>
+    <div class="py-4 m-3"><a href="Edit.html">Editar album</a></div>
+    <div class="py-4 m-3"><a href="addSong.html">Añadir canción</a></div>
+    <div class="py-4 m-3"><a href="Tours.html">Tour y fechas</a></div>
+    <div class="py-4 m-3"><a href="index.html">Salir</a></div>
     </div>
 </body>
 </html>
