--- a/addAlbum.html
+++ b/addAlbum.html
@@ -12,10 +12,11 @@
     <div class="menu texto">
     <div><img src="abeltsf.png" alt="jpg" class="imageXO"></div> <div id="user">Camilulsh</div>
     <br>
-    <div class="divisor"><a href="index.html">Other albums</a></div>
-    <div class="divisor"><a href="index.html">Edit album</a></div>
-    <div class="divisor"><a href="index.html">Add Songs</a></div>
-    <div class="divisor"><a href="index.html">Log out</a></div>
+    <div class="divisor"><a href="Home.html">Otros álbumes</a></div>
+    <div class="divisor"><a href="Edit.html">Editar album</a></div>
+    <div class="divisor"><a href="addSong.html">Añadir canción</a></div>
+    <div class="py-4 m-3"><a href="Tours.html">Tour y fechas</a></div>
+    <div class="divisor"><a href="index.html">Salir</a></div>
     </div>
     <div class="albumes" id="fondo">
         <h2>Nuevo Album</h2>
