--- a/addSong.html
+++ b/addSong.html
@@ -18,7 +18,8 @@
             <br>
             <label for="Título">Título</label>
             <br>
-            <textarea name="titulo" id="Título" class="text-center border-2 border-black bg-black" rows="2" cols="80"></textarea>
+            <textarea name="titulo" id="Título" class="text-center border-2 border-black bg-black" rows="2"
+                cols="80"></textarea>
             <br>
             <label for="Duracion">Duración</label>
             <br>
@@ -27,7 +28,8 @@
             <br>
             <label for="link">Link</label>
             <br>
-            <textarea name="link" id="link" class="text-center border-2 border-black bg-black" rows="2" cols="80"></textarea>
+            <textarea name="link" id="link" class="text-center border-2 border-black bg-black" rows="2"
+                cols="80"></textarea>
             <br>
 
             <br>
@@ -48,12 +50,14 @@
     text-center
     pt-4
     ">
-        <img src="abeltsf.png" alt="jpg" class="w-24 py-0 m-2"> <div id="user" class="text-2xl">Camilulsh</div>
+        <img src="abeltsf.png" alt="jpg" class="w-24 py-0 m-2">
+        <div id="user" class="text-2xl">Camilulsh</div>
         <br>
-        <div class="py-4 m-3"><a href="index.html">Other albums</a></div>
-        <div class="py-4 m-3"><a href="index.html">Edit album</a></div>
-        <div class="py-4 m-3"><a href="index.html">Add Songs</a></div>
-        <div class="py-4 m-3"><a href="index.html">Log out</a></div>
+        <div class="py-4 m-3"><a href="Home.html">Otros álbumes</a></div>
+        <div class="py-4 m-3"><a href="Edit.html">Editar album</a></div>
+        <div class="py-4 m-3"><a href="addSong.html">Añadir canción</a></div>
+        <div class="py-4 m-3"><a href="Tours.html">Tour y fechas</a></div>
+        <div class="py-4 m-3"><a href="index.html">Salir</a></div>
     </div>
 </body>
 
