--- a/index.html
+++ b/index.html
@@ -1,45 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Weeknd</title>
     <link rel="shortcut icon" href="favixo.ico" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
+
 <body>
-    
-<h1>AFTER HOURS</h1>
-<p>After Hours es el cuarto álbum de estudio de Abel "The Weeknd" Tesfaye, artista 
-    canadiense de R&B contemporáneo, New Wave y Dream Pop. Lanzado el 20 de marzo
-    de 2020 por XO y Republic Records, fue nominado al Premio Juno al Álbum del Año.
-    Cada canción de este álbum conceptual, uno de los más escuchados del artista, tiene un orden específico, 
-    que nos cuenta una historia; más especificamente, la de The Weeknd. 
-    Navega por el mundo de la fama, fortuna y relaciones fallidas. A su vez, toca temas como la soledad, 
-    escapismo, promiscuidad, excesos, autodesprecio y arrepentimiento. 
-</p>
-
-<div>
-<u><h3>Canciones:</h3></u>
-<ol>
-<li>Alone again <button type="button"><a href="https://www.youtube.com/watch?v=JH398xAYpZA&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8">Escuchar</a></button></li>
-<li>Too late <button type="button"><a href="https://www.youtube.com/watch?v=nl71vFvVOvw&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=2">Escuchar</a></button></li>
-<li>Hardest to love <button type="button"><a href="https://www.youtube.com/watch?v=pM3nIOYF2W8&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=3">Escuchar</a></button></li>
-<li>Scared to live <button type="button"><a href="https://www.youtube.com/watch?v=MzsU_sn2aIE&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=4">Escuchar</a></button></li>
-<li>Snowchild <button type="button"><a href="https://www.youtube.com/watch?v=G0JKdFjWkLA&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=5">Escuchar</a></button></li>
-<li>Escape from LA <button type="button"><a href="https://www.youtube.com/watch?v=vsARlcGW0jE&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=6">Escuchar</a></button></li>
-<li>Heartless <button type="button"><a href="https://www.youtube.com/watch?v=1DpH-icPpl0&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=7">Escuchar</a></button></li>
-<li>Faith <button type="button"><a href="https://www.youtube.com/watch?v=RcS_8-a-sMg&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=8">Escuchar</a></button></li>
-<li>Blinding lights <button type="button"><a href="https://www.youtube.com/watch?v=4NRXx6U8ABQ&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=9">Escuchar</a></button></li>
-<li>In your eyes <button type="button"><a href="https://www.youtube.com/watch?v=dqRZDebPIGs&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=10">Escuchar</a></button></li>
-<li>Save your tears <button type="button"><a href="https://www.youtube.com/watch?v=XXYlFuWEuKI&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=11">Escuchar</a></button></li>
-<li>Repeat after me (Interludio) <button type="button"><a href="https://www.youtube.com/watch?v=CE-Iy24NOTY&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=12">Escuchar</a></button></li>
-<li>After hours <button type="button"><a href="https://www.youtube.com/watch?v=ygTZZpVkmKg&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=13">Escuchar</a></button></li>
-<li>Until I bleed out <button type="button"><a href="https://www.youtube.com/watch?v=i58MNnk6BhY&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=14">Escuchar</a></button></li>
-</ol>
-</div>
+    <img src="banner.png" alt="moons" id="banner">
+    <p class="text-xl">After Hours es el cuarto álbum de estudio de The Weeknd. Lanzado el 20 de marzo
+        de 2020 por XO y Republic Records, fue nominado al Premio Juno al Álbum del Año.
+        Cada canción de este álbum conceptual, uno de los más escuchados del artista, tiene un orden específico,
+        que nos cuenta una historia; más especificamente, la de The Weeknd.
+        Navega por el mundo de la fama, fortuna y relaciones fallidas. A su vez, toca temas como la soledad,
+        escapismo, promiscuidad, excesos, autodesprecio y arrepentimiento.
+    </p>
+    <br>
+    <div>
+        <u>
+            <h3 class="text-2xl">Canciones:</h3>
+        </u>
+        <br>
+        <div>
 
 
+            <div class="text-xl
+flex flex-col
+    rounded-lg 
+    text-2xl 
+    p-5
+    w-5/6
+    container
+">
 
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Alone again</div>
+                    <div>4:10</div>
+                    <a
+                        href="https://www.youtube.com/watch?v=JH398xAYpZA&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8">Escuchar</a>
+                <div>Eliminar</div>
+                    </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Too late</div>
+                    <div>3:59</div>
+                    <a
+                        href="https://www.youtube.com/watch?v=nl71vFvVOvw&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=2">Escuchar</a>
+                        <div>Eliminar</div>
+                    </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Hardest to love</div>
+                    <div>3:31</div>
+                    <a href="https://www.youtube.com/watch?v=pM3nIOYF2W8&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=3">Escuchar</a></button>
+                    <div>Eliminar</div>
+                </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Scared to live </div>
+                    <div>3:11</div>
+                    <a href="https://www.youtube.com/watch?v=MzsU_sn2aIE&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=4">Escuchar</a></button>
+                    <div>Eliminar</div>
+                </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Snowchild </div>
+                    <div>4:07</div><a
+                            href="https://www.youtube.com/watch?v=G0JKdFjWkLA&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=5">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Escape from LA </div>
+                    <div>5:55</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=vsARlcGW0jE&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=6">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Heartless </div>
+                    <div>3:18</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=1DpH-icPpl0&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=7">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Faith </div>
+                    <div>4:43</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=RcS_8-a-sMg&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=8">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Blinding lights </div>
+                    <div>3:20</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=4NRXx6U8ABQ&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=9">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ In your eyes</div> 
+                    <div>3:57</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=dqRZDebPIGs&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=10">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Save your tears </div>
+                    <div>3:35</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=XXYlFuWEuKI&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=11">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Repeat after me (Interludio) </div>
+                    <div>3:15</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=CE-Iy24NOTY&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=12">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ After hours </div>
+                    <div>6:01</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=ygTZZpVkmKg&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=13">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+                <div class="flex justify-between">
+                    <div class="w-32">‣ Until I bleed out </div>
+                    <div>3:10</div><button type="button"><a
+                            href="https://www.youtube.com/watch?v=i58MNnk6BhY&list=OLAK5uy_lwaD8UXRautA8W9eWT4zZOvwf5Ktxpax8&index=14">Escuchar</a></button>
+                            <div>Eliminar</div>
+                        </div>
+            </div>
+
+           <button class="w-20 h-10 bg-black hover:bg-red-950"><a href="Home.html" class="text-2xl">Volver</a></button>
 </body>
+
 </html>
