--- a/Home.html
+++ b/Home.html
@@ -38,10 +38,12 @@
     ">
         <img src="abeltsf.png" alt="jpg" class="w-24 py-4 m-2"> <div id="user" class="text-2xl pl-2">Camilulsh</div>
         <br>
-        <div class="py-4 m-3"><a href="index.html">Other albums</a></div>
-        <div class="py-4 m-3"><a href="index.html">Edit album</a></div>
-        <div class="py-4 m-3"><a href="index.html">Add Songs</a></div>
-        <div class="py-4 m-3"><a href="index.html">Log out</a></div>
+        <div class="py-4 m-3"><a href="Home.html">Otros álbumes</a></div>
+        <div class="py-4 m-3"><a href="Edit.html">Editar album</a></div>
+        <div class="py-4 m-3"><a href="addSong.html">Añadir canción</a></div>
+        <div class="py-4 m-3"><a href="Tours.html">Tour y fechas</a></div>
+        <div class="py-4 m-3"><a href="index.html">Salir</a></div>
+        
     </div>
 
 
